[gd_scene load_steps=7 format=3 uid="uid://b72el8mfxgrj"]

[ext_resource type="Script" uid="uid://cvwet18ggi04m" path="res://src/game/inventory/oxygen/oxygen_tank.gd" id="1_xat8t"]
[ext_resource type="Texture2D" uid="uid://balasxnc6qa2g" path="res://assets/textures/items/oxygen/normal_tank.png" id="2_1rl5j"]
[ext_resource type="AudioStream" uid="uid://db325xw786g77" path="res://assets/sound/items/pick_up_mc.mp3" id="3_1rl5j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rj7e0"]
radius = 5.0
height = 20.0

[sub_resource type="Gradient" id="Gradient_bnhqw"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.9099099)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1rl5j"]
gradient = SubResource("Gradient_bnhqw")
width = 512
height = 512
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0.5)

[node name="OxygenTank" type="Area2D"]
light_mask = 3
visibility_layer = 3
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 4
script = ExtResource("1_xat8t")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.5527137e-15, 0.99999994)
scale = Vector2(0.022460934, 0.022460938)
texture = ExtResource("2_1rl5j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_rj7e0")

[node name="PickUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1rl5j")
bus = &"SFX"

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="." groups=["dynamic_light"]]
texture_filter = 1
position = Vector2(0, -4)
enabled = false
color = Color(0.46464473, 0.52422297, 0, 1)
energy = 0.22
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.9254902)
shadow_filter = 1
texture = SubResource("GradientTexture2D_1rl5j")
metadata/_edit_group_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
